# dagster_example_external_source

./: .gitignore  README.md  definitions.py  pyproject.toml
data_reconciliation_example/: pyproject.toml
data_reconciliation_example/dbt_project/models/: sources.yml
data_reconciliation_example/src/data_reconciliation_example/components/: reconciliation_check.py
data_reconciliation_example/src/data_reconciliation_example/defs/: assets.py
data_reconciliation_example/src/data_reconciliation_example/defs/reconciliation/: defs.yaml
dbt_project/: .user.yml  dbt_project.yml  example.duckdb  profiles.yml
dbt_project/models/: regularly_updated_staging.sql  sources.yml
