[project]
name = "example-factory-downstreams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cargo>=0.3",
    "dagster>=1.9.6",
    "dagster-dbt>=0.25.6",
    "dagster-dg-cli>=1.11.0",
    "dagster-webserver>=1.9.6",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.1.3",
    "palmerpenguins>=0.1.4",
    "pandas>=2.2.3",
    "ruff>=0.8.5",
]
